tests/valid_inputs/sizeof_expr.cpp

int main() {
	int size = sizeof size;
	return size;
}
