tests/invalid_inputs/sema/def_arg_recursive.cpp

int foo(int a);

int foo(int a = foo()) {
	return a;
}

int main() {

}
